--- a/cv2.html
+++ b/cv2.html
@@ -197,7 +197,7 @@ div#resume img {
 
 <body translate="no">
   <div id="resume">
-  <a href="index.html" target="_blank"><img src="https://sun9-84.userapi.com/impf/Jhn7b1xIkfxzUzMQxXWMLycd6_5ctPyKYTj1dw/mE_vj3CWkbc.jpg?size=722x698&amp;quality=95&amp;sign=5762fa2c3dab52e4f69cb285714dd91a&amp;type=album" alt="Avatar"></a>
+  <a href="index.html" target="_blank"><img src="https://github.com/lukashenkodmitry/lukashenkodmitry.github.io/blob/main/images/UqyJI4SAplI.jpg?raw=true" alt="Avatar"></a>
   <h1>Лукашенко Дмитрий</h1>
   <p>Web: <a href="https://lukashenko.github.io"> lukashenko.github.io</a> 
   <p>ВК: <a href="https://vk.com/reihardgerdrih"> lukashenko dmitry </a> 
