--- a/cv2.html
+++ b/cv2.html
@@ -199,7 +199,7 @@ div#resume img {
   <div id="resume">
   <a href="index.html" target="_blank"><img src="https://github.com/lukashenkodmitry/lukashenkodmitry.github.io/blob/main/images/UqyJI4SAplI.jpg?raw=true" alt="Avatar"></a>
   <h1>Лукашенко Дмитрий</h1>
-  <p>Web: <a href="https://lukashenko.github.io"> lukashenko.github.io</a> 
+  <p>Web: <a href="https://lukashenkodmitry.github.io"> lukashenkodmitry.github.io</a> 
   <p>ВК: <a href="https://vk.com/reihardgerdrih"> lukashenko dmitry </a> 
   </p><p>Insta: <a href="">Скоро...</a>  
   </p><p>Email: <a href="cv.html#">ludim2020@mail.ru</a>
