--- a/cv2.html
+++ b/cv2.html
@@ -201,7 +201,7 @@ div#resume img {
   <h1>Лукашенко Дмитрий</h1>
   <p>Web: <a href="https://lukashenkodmitry.github.io"> lukashenkodmitry.github.io</a> 
   <p>ВК: <a href="https://vk.com/reihardgerdrih"> lukashenko dmitry </a> 
-  </p><p>Insta: <a href="">Скоро...</a>  
+  </p><p>Insta: <a href="https://www.instagram.com/loischsiy_inst">loischsiy</a>  
   </p><p>Email: <a href="cv.html#">ludim2020@mail.ru</a>
   </p><p id="objective">
 </p><dl>
